--- a/part1/lab6doxy-test/latex/refman.tex
+++ b/part1/lab6doxy-test/latex/refman.tex
@@ -224,7 +224,7 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
-\input{index}
+\input{md__r_e_a_d_m_e}
 \chapter{Hierarchical Index}
 \input{hierarchy}
 \chapter{Class Index}
